RESOLVED FIXED43513
WebKitTestRunner on Windows fails to load TestNetscapePlugin
https://bugs.webkit.org/show_bug.cgi?id=43513
Summary WebKitTestRunner on Windows fails to load TestNetscapePlugin
Adam Roben (:aroben)
Reported 2010-08-04 15:06:21 PDT
WebKitTestRunner on Windows fails to load TestNetscapePlugin
Attachments
Patch (16.35 KB, patch)
2010-08-04 15:25 PDT, Adam Roben (:aroben)
jhoneycutt: review+
Adam Roben (:aroben)
Comment 1 2010-08-04 15:25:59 PDT
Jon Honeycutt
Comment 2 2010-08-04 17:28:51 PDT
Comment on attachment 63500 [details] Patch r=me
Adam Roben (:aroben)
Comment 3 2010-08-05 05:30:24 PDT
Adam Roben (:aroben)
Comment 4 2010-08-05 07:03:50 PDT
Note You need to log in before you can comment on or make changes to this bug.