WebKit2/Platform/Module.cpp
@@ -31,6 +31,9 @@ namespace WebKit {
 
 Module::Module(const String& path)
     : m_path(path)
+#if PLATFORM(WIN)
+    , m_module(0)
+#endif
 {
 }
 
