WebKit2/Platform/Module.h
@@ -53,6 +53,8 @@ private:
     WebCore::String m_path;
 #if PLATFORM(MAC)
     RetainPtr<CFBundleRef> m_bundle;
+#elif PLATFORM(WIN)
+    HMODULE m_module;
 #endif
 };
 
